scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/operators/access-to-edb-postgres-webhooks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: edb
  name: access-to-edb-postgres-webhooks
  namespace: "opNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloud-native-postgresql
  policyTypes:
  - Ingress
