scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/operators/access-to-ibm-common-service-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: cs
  name: access-to-ibm-common-service-operator
  namespace: "opNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      name: ibm-common-service-operator
  policyTypes:
  - Ingress
