scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/operators/access-to-ibm-postgres-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: postgres
  name: access-to-ibm-postgres-operator
  namespace: "opNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ibm-pg-operator
  policyTypes:
  - Ingress
