scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/operators/allow-webhook-access-from-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
  name: allow-webhook-access-from-apiserver
  namespace: "opNamespace"
spec:
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          apiserver: "true"
  podSelector: {}
  policyTypes:
  - Ingress
